linter and formatter added